# 2021-2e-suchy-fractualiser

./: .gitignore  .vimspector.json  CMakeLists.txt  README.md
dokumentace-src/: Makefile  literature.bib  main.tex  titulnistrany.tex
dokumentace-src/sections/: export-obrazku.tex  kompilace.tex  paralelizace-a-rychly-render.tex  procesovani-uzivatelskeho-vstupu.tex  uvod.tex
include/glad/: glad.h
src/: application.cpp  application.h  args.h  bmpformat.h  fragment.glsl  main.cpp  shader.cpp  shader.h
